# gbatchkit-python

./: README.md  pyproject.toml  requirements.txt
src/gbatchkit/: inputs.py  jobs.py  types.py
tests/: example-data.json  example_task.py
tests/gbatchkit/: gbatchkit_test.py  inputs_test.py  jobs_test.py  types_test.py
