[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gbatchkit"
version = "1.0-alpha5"
description = "Toolkit for running Google Cloud Batch jobs"
readme = "README.md"
authors = [{ name = "David Haley", email = "dchaley@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 2 - Pre-Alpha",
]
keywords = ["batch", "cloud", "google", "platform", "gcp"]
dynamic = ["dependencies"]
requires-python = ">=3.9, <=3.12"

[tool.setuptools]
# Let auto-discovery do its thing with src-layout.

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.optional-dependencies]
dev = ["black", "build", "bumpver", "callee", "isort", "pip-tools", "pytest", "twine"]

[project.urls]
Homepage = "https://github.com/redwoodconsulting-io/gbatchkit-python"

[tool.pytest.ini_options]
filterwarnings = [
    # Google code throws a deprecation warning ... make it go away
    "ignore:pkg_resources:DeprecationWarning:google.crc32c",
]
